--- a/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
+++ b/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Initial Controller-->
@@ -16,20 +17,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaD-Tc-MmZ">
-                                <rect key="frame" x="262" y="413" width="77" height="30"/>
-                                <state key="normal" title="Find Player">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tIf-bO-ND2">
+                                <rect key="frame" x="0.0" y="5" width="600" height="595"/>
+                                <state key="normal" image="Will-Ferrell-se-prend-pour-Forrest-Gump-et-se-met-au-ping-pong_portrait_w858-2.png"/>
                                 <connections>
-                                    <segue destination="X1f-l3-e91" kind="show" id="C0J-km-JG5"/>
+                                    <segue destination="X1f-l3-e91" kind="show" id="hW0-vk-LKk"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2wI-sc-tSI">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="tIf-bO-ND2" secondAttribute="trailing" constant="-16" id="1Mn-Ua-ZiO"/>
+                            <constraint firstItem="tIf-bO-ND2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="5" id="UV2-Ne-AzY"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tIf-bO-ND2" secondAttribute="bottom" id="eYz-Kw-xJl"/>
+                            <constraint firstItem="tIf-bO-ND2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="q9C-95-39m"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -48,7 +50,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mNy-qH-Xro">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="mNy-qH-Xro">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -85,6 +87,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mNy-qH-Xro" firstAttribute="leading" secondItem="A4Y-TS-HZr" secondAttribute="leadingMargin" constant="-16" id="D27-Nl-FLS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mNy-qH-Xro" secondAttribute="trailing" constant="-16" id="EQo-vi-9WY"/>
+                            <constraint firstItem="I0F-2K-SUb" firstAttribute="top" secondItem="mNy-qH-Xro" secondAttribute="bottom" id="OJI-oc-Zc3"/>
+                            <constraint firstItem="mNy-qH-Xro" firstAttribute="top" secondItem="A4Y-TS-HZr" secondAttribute="topMargin" id="XGO-us-0NN"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="mNy-qH-Xro" id="Hkr-h3-R8n"/>
@@ -94,6 +102,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqK-p3-Ron" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1049" y="429"/>
+        </scene>
+        <!--EndGameController-->
+        <scene sceneID="anL-iB-xje">
+            <objects>
+                <viewController title="EndGameController" id="goO-BT-f8A" customClass="EndGameController" customModule="PingPongHero" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jNm-BY-R6n"/>
+                        <viewControllerLayoutGuide type="bottom" id="A0d-Y9-cg8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="t5A-Xh-uhM">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9ty-uR-laC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1049" y="1173"/>
         </scene>
         <!--GameController-->
         <scene sceneID="jp8-ZX-tp1">
@@ -108,10 +134,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="goO-BT-f8A" kind="show" id="PlR-SV-zfK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh5-LF-KIh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1049" y="1167"/>
+            <point key="canvasLocation" x="259" y="1173"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Will-Ferrell-se-prend-pour-Forrest-Gump-et-se-met-au-ping-pong_portrait_w858-2.png" width="420" height="514"/>
+    </resources>
 </document>
