--- a/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
+++ b/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
@@ -17,31 +17,135 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tIf-bO-ND2">
-                                <rect key="frame" x="0.0" y="5" width="600" height="595"/>
-                                <state key="normal" image="Will-Ferrell-se-prend-pour-Forrest-Gump-et-se-met-au-ping-pong_portrait_w858-2.png"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Io7-YF-5kb">
+                                <rect key="frame" x="142" y="275" width="75" height="30"/>
+                                <state key="normal" title="Find Room">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <segue destination="X1f-l3-e91" kind="show" id="hW0-vk-LKk"/>
+                                    <segue destination="X1f-l3-e91" kind="show" id="2uS-XU-jgA"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWj-Ks-lX7">
+                                <rect key="frame" x="142" y="360" width="91" height="30"/>
+                                <state key="normal" title="Create Room">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="gZ0-Ze-dqM" kind="show" id="wOT-Js-Cve"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="tIf-bO-ND2" secondAttribute="trailing" constant="-16" id="1Mn-Ua-ZiO"/>
-                            <constraint firstItem="tIf-bO-ND2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="5" id="UV2-Ne-AzY"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tIf-bO-ND2" secondAttribute="bottom" id="eYz-Kw-xJl"/>
-                            <constraint firstItem="tIf-bO-ND2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="q9C-95-39m"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="259" y="429"/>
         </scene>
-        <!--PlayerController-->
+        <!--CreateRoomController-->
+        <scene sceneID="HNT-r3-H9V">
+            <objects>
+                <viewController title="CreateRoomController" id="gZ0-Ze-dqM" customClass="CreateRoomController" customModule="PingPongHero" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9Z0-T0-8Fr"/>
+                        <viewControllerLayoutGuide type="bottom" id="S00-ZJ-IRH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3ou-XJ-eqd">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Room Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Jp-fS-2wV">
+                                <rect key="frame" x="16" y="68" width="568" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ZfT-SD-lwx">
+                                <rect key="frame" x="16" y="106" width="568" height="104"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="v8Q-Y7-nGh" customClass="CustomCellGameMode" customModule="PingPongHero" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="v8Q-Y7-nGh" id="zLB-V7-TAg">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNk-uo-XEf">
+                                                    <rect key="frame" x="263" y="11" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="centerY" secondItem="NNk-uo-XEf" secondAttribute="centerY" constant="0.5" id="2hP-78-Le4"/>
+                                                <constraint firstAttribute="centerX" secondItem="NNk-uo-XEf" secondAttribute="centerX" id="OCZ-VH-JOP"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mode" destination="NNk-uo-XEf" id="DWP-nV-Zxt"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="gZ0-Ze-dqM" id="m9u-FS-DG9"/>
+                                    <outlet property="delegate" destination="gZ0-Ze-dqM" id="nhD-pU-Gj5"/>
+                                </connections>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWc-Ky-Jl1">
+                                <rect key="frame" x="285" y="432" width="30" height="30"/>
+                                <state key="normal" title="Play">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZfT-SD-lwx" firstAttribute="leading" secondItem="3ou-XJ-eqd" secondAttribute="leadingMargin" id="3eH-vr-HAJ"/>
+                            <constraint firstAttribute="centerX" secondItem="7Jp-fS-2wV" secondAttribute="centerX" id="6uC-ZI-cBN"/>
+                            <constraint firstAttribute="centerY" secondItem="7Jp-fS-2wV" secondAttribute="centerY" constant="217" id="HH3-OU-e24"/>
+                            <constraint firstAttribute="centerY" secondItem="ZfT-SD-lwx" secondAttribute="centerY" constant="142" id="L7f-Ld-IeJ"/>
+                            <constraint firstItem="ZfT-SD-lwx" firstAttribute="trailing" secondItem="3ou-XJ-eqd" secondAttribute="trailingMargin" id="TiJ-nx-1lM"/>
+                            <constraint firstItem="ZfT-SD-lwx" firstAttribute="top" secondItem="7Jp-fS-2wV" secondAttribute="bottom" constant="8" id="nSf-Y4-bsp"/>
+                            <constraint firstItem="7Jp-fS-2wV" firstAttribute="leading" secondItem="3ou-XJ-eqd" secondAttribute="leadingMargin" id="wc8-Iu-m1C"/>
+                            <constraint firstItem="7Jp-fS-2wV" firstAttribute="trailing" secondItem="3ou-XJ-eqd" secondAttribute="trailingMargin" id="zFI-hl-sfE"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="ZfT-SD-lwx" id="ZEM-r1-U7m"/>
+                        <segue destination="XTH-in-E7o" kind="show" id="bxp-0K-lDZ"/>
+                        <segue destination="8Lr-Ts-Cl0" kind="show" id="ake-lG-Ckr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TEt-yY-zQ6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1070" y="429"/>
+        </scene>
+        <!--RoomController-->
+        <scene sceneID="60M-K1-cfz">
+            <objects>
+                <viewController title="RoomController" id="8Lr-Ts-Cl0" customClass="RoomController" customModule="PingPongHero" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nOT-Zj-CPE"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q2E-2a-b0c"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2aN-UO-v0V">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="XTH-in-E7o" kind="show" id="ZSL-8B-PkG"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8pY-jf-4ha" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1821" y="140"/>
+        </scene>
+        <!--RoomSelectController-->
         <scene sceneID="apx-Qd-1Am">
             <objects>
-                <viewController title="PlayerController" id="X1f-l3-e91" customClass="PlayerController" customModule="PingPongHero" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="RoomSelectController" id="X1f-l3-e91" customClass="RoomController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="fqu-Yk-bNg"/>
                         <viewControllerLayoutGuide type="bottom" id="I0F-2K-SUb"/>
@@ -60,18 +164,21 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gcN-j2-LcF" id="e1Q-aM-aFY">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmy-7Z-32r">
-                                                    <rect key="frame" x="562" y="11" width="30" height="30"/>
-                                                    <state key="normal" title="Play">
-                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Player" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYq-Nj-5mZ">
-                                                    <rect key="frame" x="8" y="11" width="48" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Room Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYq-Nj-5mZ">
+                                                    <rect key="frame" x="8" y="11" width="97" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jmy-7Z-32r">
+                                                    <rect key="frame" x="555" y="7" width="37" height="30"/>
+                                                    <state key="normal" title="Enter">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <segue destination="8Lr-Ts-Cl0" kind="show" id="isJ-fd-igF"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -96,12 +203,11 @@
                     </view>
                     <connections>
                         <outlet property="tableView" destination="mNy-qH-Xro" id="Hkr-h3-R8n"/>
-                        <segue destination="XTH-in-E7o" kind="show" id="K2l-0X-e1i"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqK-p3-Ron" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1049" y="429"/>
+            <point key="canvasLocation" x="1070" y="-253"/>
         </scene>
         <!--EndGameController-->
         <scene sceneID="anL-iB-xje">
@@ -119,7 +225,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ty-uR-laC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1049" y="1173"/>
+            <point key="canvasLocation" x="259" y="1173"/>
         </scene>
         <!--GameController-->
         <scene sceneID="jp8-ZX-tp1">
@@ -140,10 +246,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh5-LF-KIh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="259" y="1173"/>
+            <point key="canvasLocation" x="1070" y="1173"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Will-Ferrell-se-prend-pour-Forrest-Gump-et-se-met-au-ping-pong_portrait_w858-2.png" width="420" height="514"/>
-    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ZSL-8B-PkG"/>
+        <segue reference="isJ-fd-igF"/>
+    </inferredMetricsTieBreakers>
 </document>
