--- a/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
+++ b/PingPongHero/PingPongHero/Base.lproj/Main.storyboard
@@ -238,7 +238,56 @@
                     <view key="view" contentMode="scaleToFill" id="c3S-HH-ZKu">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="raquete" translatesAutoresizingMaskIntoConstraints="NO" id="lCv-t4-2Tl">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="vvb-Am-wOe" firstAttribute="top" secondItem="lCv-t4-2Tl" secondAttribute="bottom" id="0IC-OB-e1F"/>
+                            <constraint firstItem="lCv-t4-2Tl" firstAttribute="leading" secondItem="c3S-HH-ZKu" secondAttribute="leadingMargin" id="1hZ-m0-fxL">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="lCv-t4-2Tl" firstAttribute="leading" secondItem="c3S-HH-ZKu" secondAttribute="leading" id="1vE-yb-qV0"/>
+                            <constraint firstItem="vvb-Am-wOe" firstAttribute="top" secondItem="lCv-t4-2Tl" secondAttribute="bottom" id="DCp-L5-w9w"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lCv-t4-2Tl" secondAttribute="trailing" id="Kkr-R5-Jhn">
+                                <variation key="heightClass=regular-widthClass=compact" constant="-16"/>
+                            </constraint>
+                            <constraint firstItem="lCv-t4-2Tl" firstAttribute="top" secondItem="c3S-HH-ZKu" secondAttribute="top" id="QcW-fm-6cI"/>
+                            <constraint firstItem="lCv-t4-2Tl" firstAttribute="top" secondItem="c3S-HH-ZKu" secondAttribute="topMargin" id="VlQ-pR-lwB"/>
+                            <constraint firstAttribute="trailing" secondItem="lCv-t4-2Tl" secondAttribute="trailing" id="XcB-Mk-Ec2"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="lCv-t4-2Tl"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="1hZ-m0-fxL"/>
+                                <exclude reference="1vE-yb-qV0"/>
+                                <exclude reference="Kkr-R5-Jhn"/>
+                                <exclude reference="QcW-fm-6cI"/>
+                                <exclude reference="VlQ-pR-lwB"/>
+                                <exclude reference="XcB-Mk-Ec2"/>
+                                <exclude reference="0IC-OB-e1F"/>
+                                <exclude reference="DCp-L5-w9w"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="lCv-t4-2Tl"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="1hZ-m0-fxL"/>
+                                <include reference="1vE-yb-qV0"/>
+                                <exclude reference="Kkr-R5-Jhn"/>
+                                <include reference="QcW-fm-6cI"/>
+                                <exclude reference="VlQ-pR-lwB"/>
+                                <include reference="XcB-Mk-Ec2"/>
+                                <include reference="0IC-OB-e1F"/>
+                                <exclude reference="DCp-L5-w9w"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
                         <segue destination="goO-BT-f8A" kind="show" id="PlR-SV-zfK"/>
@@ -246,9 +295,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gh5-LF-KIh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1070" y="1173"/>
+            <point key="canvasLocation" x="1117.5" y="1146"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="raquete" width="187" height="333"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="bxp-0K-lDZ"/>
         <segue reference="ake-lG-Ckr"/>
